--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ag-grid-community": "^28.2.1",
     "ag-grid-react": "^28.2.1",
     "chart.js": "^4.0.1",
+    "firebase": "^9.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
